Apply reformat